<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Ipilyan</string>
  <string name="header_title">IPILYAN</string>
  <string name="header_subtitle">IP ADDRESS LOOKUP</string>
  <string name="hint_ip">IP address or domain</string>
  <string name="btn_lookup">LOOK UP</string>

  <string name="lbl_ip_target">IP Target</string>
  <string name="lbl_type">Type</string>
  <string name="lbl_country">Country</string>
  <string name="lbl_country_code">Country Code</string>
  <string name="lbl_city">City</string>
  <string name="lbl_continent">Continent</string>
  <string name="lbl_continent_code">Continent Code</string>
  <string name="lbl_region">Region</string>
  <string name="lbl_region_code">Region Code</string>
  <string name="lbl_latitude">Latitude</string>
  <string name="lbl_longitude">Longitude</string>
  <string name="lbl_maps">Maps</string>
  <string name="lbl_eu">EU</string>
  <string name="lbl_postal">Postal</string>
  <string name="lbl_calling_code">Calling Code</string>
  <string name="lbl_capital">Capital</string>
  <string name="lbl_borders">Borders</string>
  <string name="lbl_flag">Country Flag</string>
  <string name="lbl_asn">ASN</string>
  <string name="lbl_org">ORG</string>
  <string name="lbl_isp">ISP</string>
  <string name="lbl_domain">Domain</string>
  <string name="lbl_tz_id">ID</string>
  <string name="lbl_dst">DST</string>
  <string name="lbl_offset">offset</string>
  <string name="lbl_utc">UTC</string>
  <string name="lbl_current_time">Current Time</string>

  <string name="error_invalid_ip">Enter a valid IP or domain</string>
  <string name="error_network">Network error. Check connection.</string>
  <string name="error_api">Could not find info for this IP</string>
  <string name="loading">FETCHING...</string>
  <string name="footer">ipwhois.app</string>
  <string name="btn_my_ip">MY IP</string>
  <string name="open_maps">OPEN MAPS</string>
  <string name="crash_title">CRASH</string>
  <string name="crash_subtitle">SOMETHING BROKE</string>
  <string name="crash_message">AN UNEXPECTED ERROR OCCURRED. COPY THE LOG BELOW AND SHARE IT WITH THE DEVELOPER.</string>
  <string name="crash_log_header">CRASH LOG</string>
  <string name="btn_copy_log">COPY LOG</string>
  <string name="btn_restart">RESTART</string>
  <string name="copied_to_clipboard">COPIED TO CLIPBOARD</string>
</resources>
